Adding option to clean data.

--- a/templates/control-panel.html
+++ b/templates/control-panel.html
@@ -16,6 +16,7 @@
 		<div class="container">
 			<div class="page-header">
   				<h1>Local Sheriff</h1>
+  				<button type="button" id="clean-storage"> Clear Data </button>
 		</div>
 		<!--
 		<div class="container bs-docs-container">
