changes for pushing on amo-store and other improvments

--- a/templates/control-panel.html
+++ b/templates/control-panel.html
@@ -3,9 +3,7 @@
 		<link href="../static/css/bootstrap.css" rel=stylesheet></link>
 		<link href="../static/css/docs.min.css" rel=stylesheet></link>
 		<script src="../scripts/control-panel.js"></script>
-		<script src="../static/js/jquery.js"></script>
-	  	<script src="../static/js/jquery.tmpl.min.js"></script>
-		<!-- -->
+		<script src="../scripts/instant-search-highlight.js"></script>
 	</head>
 	<body>
 
@@ -50,7 +48,8 @@
 				</div>
 			</div>
 			<input type="input" class="form-control" id="search-box" placeholder="Type to search..." value="">
-		  	<script src="../scripts/tree.js"></script>
+			  <script src="../scripts/tree.js"></script>
+			  
 		  	<div class="jumbotron">
 		  		<div id='summary'>
 		  		</div>
